--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SporTEC</string>
+    <string name="credential_activity_tab_login">Iniciar Sesión</string>
+    <string name="credential_activity_tab_signin">Registrarse</string>
 </resources>
