add, conecction to login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
         <item>Baseball</item>
     </string-array>
 
+
+    <string name="login_dialog"> Iniciando Sesión </string>
+
 </resources>
