--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="credential_activity_take_photo">Tomar foto</string>
     <string name="credential_activity_select_sports">Deportes</string>
     <string name="login_dialog"> Iniciando Sesión </string>
+    <string name="logout_dialog"> Cerrando Sesión </string>
     <string name="login_error_credentials"> Credenciales incorrectas</string>
     <string name="login_error_querying"> Credenciales incorrectas</string>
     <string name="open_drawer">Open</string>
