--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,10 @@
 
     <string name="message_phototaken">  La fotografía ha sido tomada</string>
     <string name="message_fetchsports">  Descargando deportes</string>
+    <string name="message_sports">  Deportes disponibles</string>
+    <string name="ok_label">Ok</string>
+    <string name="dismiss_label">Cancelar</string>
+    <string name="clear_all_label">Limpiar selección</string>
 
     <string-array name="sports_local_options">
         <item>Baloncesto</item>
